# typio-engine-rime

./: .gitignore  CHANGELOG.md  README.md  meson.build  meson_options.txt  opencode.json  typio-engine-rime.toml.in
.github/workflows/: ci.yml
docs/dev/: index.md  setup.md
docs/explanation/: librime-integration.md
docs/how-to/: index.md  package-for-distribution.md
docs/reference/: index.md  rime-config.md
docs/tutorials/: 01-getting-started.md  index.md
src/: meson.build  path_expand.c  path_expand.h  rime_config.c  rime_control.c  rime_deploy.c  rime_engine.c  rime_internal.h  rime_key.c  rime_mode.c  rime_session.c  rime_setup.c  rime_sync.c  rime_utils.c  worker_main.c
tests/: meson.build  test_rime_engine.c  test_rime_path_expand.c
